--- a/test-output/old/openCart Suite/methods-alphabetical.html
+++ b/test-output/old/openCart Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>openCart Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="676062">  <td>24/09/03 17:42:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC001_AccountRegisterTest@313ac989]">&gt;&gt;setUp</td> 
+<tr bgcolor="676062">  <td>24/09/03 17:48:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC001_AccountRegisterTest@313ac989]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="676062">  <td>24/09/03 17:42:50</td>   <td>3614</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC001_AccountRegisterTest@36fc695d]">&gt;&gt;setUp</td> 
+<tr bgcolor="676062">  <td>24/09/03 17:51:17</td>   <td>182378</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC001_AccountRegisterTest@36fc695d]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="676062">  <td>24/09/03 17:42:50</td>   <td>2934</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC001_AccountRegisterTest@313ac989]">&lt;&lt;tearDown</td> 
+<tr bgcolor="676062">  <td>24/09/03 17:51:17</td>   <td>181640</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC001_AccountRegisterTest@313ac989]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="676062">  <td>24/09/03 17:42:59</td>   <td>11952</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC001_AccountRegisterTest@36fc695d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>24/09/03 17:42:50</td>   <td>2912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_AccountRegisterTest.verify_AccountRegister()[pri:0, instance:testCases.TC001_AccountRegisterTest@313ac989]">verify_AccountRegister</td> 
+<tr bgcolor="676062">  <td>24/09/03 17:54:17</td>   <td>362442</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC001_AccountRegisterTest@36fc695d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="c386c8">  <td>24/09/03 17:51:17</td>   <td>181627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_AccountRegisterTest.verify_AccountRegister()[pri:0, instance:testCases.TC001_AccountRegisterTest@313ac989]">verify_AccountRegister</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="c386c8">  <td>24/09/03 17:42:54</td>   <td>6638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_AccountRegisterTest.verify_AccountRegister()[pri:0, instance:testCases.TC001_AccountRegisterTest@36fc695d]">verify_AccountRegister</td> 
+<tr bgcolor="c386c8">  <td>24/09/03 17:54:17</td>   <td>362431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_AccountRegisterTest.verify_AccountRegister()[pri:0, instance:testCases.TC001_AccountRegisterTest@36fc695d]">verify_AccountRegister</td> 
   <td>main@617901222</td>   <td></td> </tr>
 </table>
