--- a/test-output/index.html
+++ b/test-output/index.html
@@ -39,8 +39,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-_openCart_Suite" class="navigator-link">
-              <span class="suite-name border-passed"> openCart Suite</span>
+            <a href="#" panel-name="suite-openCart_Suite" class="navigator-link">
+              <span class="suite-name border-skipped">openCart Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,37 +50,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-_openCart_Suite" class="navigator-link ">
-                    <span>F:\Users\Eclipse WorkSpace\OpencartV2\testng.xml</span>
+                  <a href="#" panel-name="test-xml-openCart_Suite" class="navigator-link ">
+                    <span>F:\Users\Eclipse WorkSpace\OpencartV2\crossbrowser.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-_openCart_Suite" class="navigator-link ">
-                    <span class="test-stats">1 test</span>
+                  <a href="#" panel-name="testlist-openCart_Suite" class="navigator-link ">
+                    <span class="test-stats">2 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-_openCart_Suite" class="navigator-link ">
+                  <a href="#" panel-name="group-openCart_Suite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-_openCart_Suite" class="navigator-link ">
+                  <a href="#" panel-name="times-openCart_Suite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-_openCart_Suite" class="navigator-link ">
+                  <a href="#" panel-name="reporter-openCart_Suite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-_openCart_Suite" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-openCart_Suite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-_openCart_Suite" class="navigator-link ">
+                  <a href="#" panel-name="chronological-openCart_Suite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -93,21 +93,26 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,  2 skipped,  </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-_openCart_Suite" class="hide-methods passed suite-_openCart_Suite"> (hide)</a> <!-- hide-methods passed suite-_openCart_Suite -->
-                      <a href="#" panel-name="suite-_openCart_Suite" class="show-methods passed suite-_openCart_Suite"> (show)</a> <!-- show-methods passed suite-_openCart_Suite -->
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-openCart_Suite" class="hide-methods skipped suite-openCart_Suite"> (hide)</a> <!-- hide-methods skipped suite-openCart_Suite -->
+                      <a href="#" panel-name="suite-openCart_Suite" class="show-methods skipped suite-openCart_Suite"> (show)</a> <!-- show-methods skipped suite-openCart_Suite -->
                     </span>
-                    <div class="method-list-content passed suite-_openCart_Suite">
+                    <div class="method-list-content skipped suite-openCart_Suite">
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-_openCart_Suite" title="testCases.TC001_AccountRegisterTest" class="method navigator-link" hash-for-method="verify_AccountRegister">verify_AccountRegister</a> <!-- method navigator-link -->
+                        <img src="skipped.png" width="3%"/>
+                        <a href="#" panel-name="suite-openCart_Suite" title="testCases.TC001_AccountRegisterTest" class="method navigator-link" hash-for-method="verify_AccountRegister">verify_AccountRegister</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-_openCart_Suite -->
+                      <span>
+                        <img src="skipped.png" width="3%"/>
+                        <a href="#" panel-name="suite-openCart_Suite" title="testCases.TC001_AccountRegisterTest" class="method navigator-link" hash-for-method="verify_AccountRegister">verify_AccountRegister</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content skipped suite-openCart_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -118,10 +123,10 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-_openCart_Suite" class="panel _openCart_Suite">
-          <div class="suite-_openCart_Suite-class-passed">
+        <div panel-name="suite-openCart_Suite" class="panel openCart_Suite">
+          <div class="suite-openCart_Suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="skipped.png"/>
               <span class="class-name">testCases.TC001_AccountRegisterTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -130,98 +135,136 @@
                   <a name="verify_AccountRegister">
                   </a> <!-- verify_AccountRegister -->
                   <span class="method-name">verify_AccountRegister</span>
+                  <div class="stack-trace">java.lang.RuntimeException: WebDriver setup failed
+	at testCases.BaseClass.setUp(BaseClass.java:107)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+Caused by: java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.manage()&quot; because &quot;testCases.BaseClass.driver&quot; is null
+	at testCases.BaseClass.setUp(BaseClass.java:100)
+	... 24 more
+... Removed 23 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verify_AccountRegister">
+                  </a> <!-- verify_AccountRegister -->
+                  <span class="method-name">verify_AccountRegister</span>
+                  <div class="stack-trace">java.lang.RuntimeException: WebDriver setup failed
+	at testCases.BaseClass.setUp(BaseClass.java:107)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+Caused by: java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.manage()&quot; because &quot;testCases.BaseClass.driver&quot; is null
+	at testCases.BaseClass.setUp(BaseClass.java:100)
+	... 24 more
+... Removed 23 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-_openCart_Suite-class-passed -->
-        </div> <!-- panel _openCart_Suite -->
-        <div panel-name="test-xml-_openCart_Suite" class="panel">
+          </div> <!-- suite-openCart_Suite-class-skipped -->
+        </div> <!-- panel openCart_Suite -->
+        <div panel-name="test-xml-openCart_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\Users\Eclipse WorkSpace\OpencartV2\testng.xml</span>
+            <span class="header-content">F:\Users\Eclipse WorkSpace\OpencartV2\crossbrowser.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot; openCart Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite name=&quot;openCart Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;utilities.ExtentReportManager&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;firefoxTest&quot;&gt;
+    &lt;parameter name=&quot;os&quot; value=&quot;windows&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;testCases.BaseClass&quot;/&gt;
+      &lt;class name=&quot;testCases.TC001_AccountRegisterTest&quot;/&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- firefoxTest --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;chromeTest&quot;&gt;
     &lt;parameter name=&quot;os&quot; value=&quot;windows&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;testCases.BaseClass&quot;/&gt;
       &lt;class name=&quot;testCases.TC001_AccountRegisterTest&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test --&gt;
-&lt;/suite&gt; &lt;!--  openCart Suite --&gt;
+  &lt;/test&gt; &lt;!-- chromeTest --&gt;
+&lt;/suite&gt; &lt;!-- openCart Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-_openCart_Suite" class="panel">
+        <div panel-name="testlist-openCart_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for  openCart Suite</span>
+            <span class="header-content">Tests for openCart Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (2 classes)</span>
+                <span class="test-name">firefoxTest (2 classes)</span>
+              </li>
+              <li>
+                <span class="test-name">chromeTest (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-_openCart_Suite" class="panel">
+        <div panel-name="group-openCart_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for  openCart Suite</span>
+            <span class="header-content">Groups for openCart Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-_openCart_Suite" class="panel">
+        <div panel-name="times-openCart_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for  openCart Suite</span>
+            <span class="header-content">Times for openCart Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData__openCart_Suite');
-function tableData__openCart_Suite() {
+suiteTableInitFunctions.push('tableData_openCart_Suite');
+function tableData_openCart_Suite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verify_AccountRegister')
 data.setCell(0, 2, 'testCases.TC001_AccountRegisterTest')
-data.setCell(0, 3, 5257);
-window.suiteTableData['_openCart_Suite']= { tableData: data, tableDiv: 'times-div-_openCart_Suite'}
+data.setCell(0, 3, 0);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verify_AccountRegister')
+data.setCell(1, 2, 'testCases.TC001_AccountRegisterTest')
+data.setCell(1, 3, 0);
+window.suiteTableData['openCart_Suite']= { tableData: data, tableDiv: 'times-div-openCart_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
-              <div id="times-div-_openCart_Suite">
-              </div> <!-- times-div-_openCart_Suite -->
+              <span class="suite-total-time">Total running time: 0 ms</span>
+              <div id="times-div-openCart_Suite">
+              </div> <!-- times-div-openCart_Suite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-_openCart_Suite" class="panel">
+        <div panel-name="reporter-openCart_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for  openCart Suite</span>
+            <span class="header-content">Reporter output for openCart Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-_openCart_Suite" class="panel">
+        <div panel-name="ignored-methods-openCart_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-_openCart_Suite" class="panel">
+        <div panel-name="chronological-openCart_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -229,16 +272,32 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">testCases.TC001_AccountRegisterTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUp(chrome, windows)</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">setUp(firefox, windows)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">verify_AccountRegister</span>
-                <span class="method-start">3655 ms</span>
+                <span class="method-start">181636 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">8931 ms</span>
+                <span class="method-start">181648 ms</span>
+              </div> <!-- configuration-class after -->
+              <div class="configuration-class before">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">setUp(chrome, windows)</span>
+                <span class="method-start">182386 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">verify_AccountRegister</span>
+                <span class="method-start">362439 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">362449 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
