--- a/test-output/old/openCart Suite/toc.html
+++ b/test-output/old/openCart Suite/toc.html
@@ -22,16 +22,16 @@
 </tr></table>
 <table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>firefoxTest (0/0/1)</td><td valign='top' align='right'>
-  <a href='firefoxTest.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>chromeTest (0/0/1)</td><td valign='top' align='right'>
+  <a href='chromeTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>chromeTest (1/0/0)</td><td valign='top' align='right'>
-  <a href='chromeTest.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>firefoxTest (0/0/1)</td><td valign='top' align='right'>
+  <a href='firefoxTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
